[package]
authors = ["Sam Scott <sam@osohq.com>"]
edition = "2018"
categories = ["encoding", "web-programming"]
description = "Querystrings for Serde"
documentation = "https://docs.rs/serde_qs"
keywords = ["serde", "serialization", "querystring"]
license = "MIT/Apache-2.0"
name = "serde_qs"
repository = "https://github.com/samscott89/serde_qs"
readme = "README.md"
version = "0.10.1"
rust-version = "1.36"

[dependencies]
actix-web4 = { version = "4.0", optional = true, package = "actix-web", default-features = false }
actix-web3 = { version = "3.3", optional = true, package = "actix-web", default-features = false }
actix-web2 = { version = "2.0", optional = true, package = "actix-web", default-features = false }
futures = { version = "0.3", optional = true }
percent-encoding = "2.1"
serde = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", optional = true }
warp-framework = { package = "warp", version = "0.3", default-features = false, optional = true }
axum-framework = { package = "axum", git = "https://github.com/tokio-rs/axum.git", rev = "944f388ae0f54607902f8cd9b8279ec53c46862c", default-features = false, optional = true }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
rand = "0.8"
serde_derive = "1.0"
serde_urlencoded = "0.7"
serde_with = "1.10"

[features]
default = []
actix4 = ["actix-web4", "futures"]
actix3 = ["actix-web3", "futures"]
actix2 = ["actix-web2", "futures"]
# deprecated feature -- used to return a warning
actix = []
warp = ["futures", "tracing", "warp-framework"]
axum = ["axum-framework", "futures"]

[package.metadata.docs.rs]
features = ["actix4", "warp"]
